Add golf expense info

--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
             <div class="expenses">
                 <p><strong>House:</strong> $650/person*</p>
                 <p><strong>Food & Drinks:</strong> (tbd)</p>
+                <p><strong>Golf at PGA West:</strong> $153/person</p>
                 <p><strong>Venmo:</strong> <a href="https://venmo.com/u/bugzoe" target="_blank">@bugzoe</a></p>
 		<p class="note">*send what you can.</p>
 		<p class="note">*quietly accepting additional funds for those who want a greater contribution.</p>
