Add link to guest info doc

--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
 
         <section id="arrivals" class="section">
             <h2>Arrivals & Departures</h2>
+            <p class="important-doc"><i class="fas fa-file-alt"></i> <a href="https://docs.google.com/document/d/1G-LX--nbkVhA5LISZ-hh1WP5eh2ZuIEdcHoupiP6EzY/edit?tab=t.0" target="_blank">Complete Guest Information Document</a> (arrival/departure times, allergies, etc.)</p>
             <p>Will sort out who is riding with one another from airport and send suggestion asap!</p>
             
             <h3>Vehicles:</h3>
