Add Tuesday morning yoga & sound bath

--- a/index.html
+++ b/index.html
@@ -244,6 +244,13 @@
                 <h3>Tuesday 5/27</h3>
                 <div class="day-content">
                     <div class="event">
+                        <span class="time">6:00 AM</span>
+                        <div class="event-details">
+                            <p class="event-title">Sunrise Yoga & Sound Bath</p>
+                        </div>
+                    </div>
+
+                    <div class="event">
                         <span class="time">Morning</span>
                         <div class="event-details">
                             <p class="event-title">Pool Hang + Breakfast</p>
